--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
@@ -18,6 +26,12 @@
       .pad {
         padding: 20px;
       }
+      .table-custom {
+        width: 50%;
+        border: 2px;
+        border-style:solid
+        color: green;
+      }
     </style>
 
     <title>Exercise 9</title>
@@ -26,35 +40,30 @@
     <!-- Exercise 9 - Step1 - A page with a heading , a div and a button should be displayed. This div should have , an h3 element and some text. 
     Step2 -  On clicking the button, the h3 element and text, shoud dissappear and in their place a table with rows of elements should be displayed. The elements should have been part of an array. -->
 
-    <h1>This is magic!!</h1>
+    <h1 id="myh1">Watch this magic trick!</h1>
     <br /><br />
     <div id="mydiv" class="pad">
-      <h3>I will make this text turn into a table.</h3>
-      (Click the button below.)
+      <h3>I will turn this sentence into a table.</h3>
+      (and a rabbit)
     </div>
     <br /><br />
-
-    <button class="btn btn-success" onClick="displayArr()">Abracadabra</button>
-
-    <!-- <table class="table table-responsive">
-      <tr>
-        <td id="td1">One</td>
-      </tr>
-      <tr>
-        <td id="td2">Two</td>
-      </tr>
-      <tr>
-        <td id="td3">Three</td>
-      </tr>
-    </table> -->
-
     <script>
       let myArray = ["One", "Two", "Three"];
+    </script>
+    <div id="mydiv2">
+      <button class="btn btn-success" onClick="displayArr(myArray)">
+        Abracadabra
+      </button>
+      &lt&lt-- click here
+    </div>
+    <script>
+      // let myArray = ["One", "Two", "Three"];
 
-      function displayArr() {
+      function displayArr(myArray) {
         console.log("been here done that");
+        //turn the sentence into a table
         document.getElementById("mydiv").innerHTML =
-          '<table class="table table-responsive table-striped table-hover">\
+          '<table class="table table-responsive table-striped table-hover table-custom">\
             <tr>\
                 <td id="td1">One</td>\
             </tr>\
@@ -64,9 +73,14 @@
             <tr>\
                 <td id="td3">Three</td>\
             </tr>';
+        //populate the table
         document.getElementById("td1").textContent = myArray[0];
         document.getElementById("td2").textContent = myArray[1];
         document.getElementById("td3").textContent = myArray[2];
+        //turn the button into a rabbit
+        document.getElementById("mydiv2").innerHTML =
+          '<img src="rabbit.jpg" alt="rabbit" />';
+        document.getElementById("myh1").textContent = "That's awesome!!";
       }
     </script>
   </body>
